--- a/manifest.yml
+++ b/manifest.yml
@@ -1,1 +1,7 @@
-
+---
+applications:
+ - name: FirstLibertyForJavaAppForMoose
+   random-route: true
+   path: target/GetStartedJava.war
+   memory: 256M
+   instances: 1
